--- a/chapter6.Rmd
+++ b/chapter6.Rmd
@@ -1,16 +1,16 @@
---- 
-title_meta  : Chapter 6
-title       : Lists
-description : Lists, as opposed to vectors, can hold components of different types, just like your to-do list at home or at work. This intro to R chapter will teach you how to create, name and subset these lists.
-
 ---
+title_meta: 'Chapter 6'
+title: Lists
+description: 'Lists, as opposed to vectors, can hold components of different types, just like your to-do list at home or at work. This intro to R chapter will teach you how to create, name and subset these lists.'
+---
+
 ## Lists, why would you need them?
 
 ```yaml
 type: NormalExercise
+key: 2afcdb6a76ec91bf266de9b2ac295d844d7bb004
 xp: 100
 skills: 1
-key: 2afcdb6a76ec91bf266de9b2ac295d844d7bb004
 ```
 
 Congratulations! At this point in the course you are already familiar with:
@@ -47,15 +47,15 @@ Just click the 'Submit Answer' button.
 success_msg("Ready, set, go! Continue to the next exercise.")
 ```
 
-
 ---
+
 ## Lists, why would you need them? (2)
 
 ```yaml
 type: NormalExercise
+key: 68f93c5c504616bd18876da52cd123277d56fc8b
 xp: 100
 skills: 1
-key: 68f93c5c504616bd18876da52cd123277d56fc8b
 ```
 
 A **list** in R is similar to your to-do list at work or school: the different items on that list most likely differ in length, characteristic, type of activity that has to do be done, ... 
@@ -90,15 +90,15 @@ Click 'Submit Answer' to start the first exercise on lists.
 success_msg("Cool. Let's get our hands dirty!")
 ```
 
-
 ---
+
 ## Creating a list
 
 ```yaml
 type: NormalExercise
+key: 4beee9cb532c889903218b49b83ab5ef133eac83
 xp: 100
 skills: 1
-key: 4beee9cb532c889903218b49b83ab5ef133eac83
 ```
 
 Let us create our first list! To construct a list you use the function [`list()`](http://www.rdocumentation.org/packages/base/functions/list): 
@@ -161,15 +161,15 @@ test_object("my_list",
 success_msg("Wonderful! Head over to the next exercise.")
 ```
 
-
 ---
+
 ## Creating a named list
 
 ```yaml
 type: NormalExercise
+key: 89dd0126568b1ff5a84033c571907a8a282245e4
 xp: 100
 skills: 1
-key: 89dd0126568b1ff5a84033c571907a8a282245e4
 ```
 
 Well done, you're on a roll!
@@ -254,15 +254,15 @@ test_output_contains("my_list", incorrect_msg = "Don't forget to print `my_list`
 success_msg("Great! Not only do you know how to construct lists now, you can also name them; a skill that will prove most useful in practice. Continue to the next exercise.")
 ```
 
-
 ---
+
 ## Creating a named list (2)
 
 ```yaml
 type: NormalExercise
+key: 19fd17cc792ef870c1558b3a9bae08c1d1e3acae
 xp: 100
 skills: 1
-key: 19fd17cc792ef870c1558b3a9bae08c1d1e3acae
 ```
 
 Being a huge movie fan (remember your job at LucasFilms), you decide to start storing information on good movies with the help of lists. 
@@ -319,15 +319,15 @@ test_object("shining_list", eq_condition = "equal",
 success_msg("Wonderful! You now know how to construct and name lists. As in the previous chapters, let's look at how to select elements for lists. Head over to the next exercise")
 ```
 
-
 ---
+
 ## Selecting elements from a list
 
 ```yaml
 type: NormalExercise
+key: 1ef3278944562caef64b9927dd2ddb6ee52334cd
 xp: 100
 skills: 1
-key: 1ef3278944562caef64b9927dd2ddb6ee52334cd
 ```
 
 Your list will often be built out of numerous elements and components. Therefore, getting a single element, multiple elements, or a component out of it is not always straightforward. 
@@ -393,15 +393,15 @@ test_output_contains("shining_list$actors[2]", incorrect_msg = "To select the se
 success_msg("Great! Selecting elements from lists is rather easy isn't it? Continue to the next exercise.")
 ```
 
-
 ---
+
 ## Adding more movie information to the list
 
 ```yaml
 type: NormalExercise
+key: ca3f7b71504ff93940cf65889d406a58c5b0019c
 xp: 100
 skills: 1
-key: ca3f7b71504ff93940cf65889d406a58c5b0019c
 ```
 
 Being proud of your first list, you shared it with the members of your movie hobby club. However, one of the senior members, a guy named M. McDowell, noted that you forgot to add the release year. Given your ambitions to become next year's president of the club, you decide to add this information to the list. 
@@ -436,7 +436,6 @@ load(url("http://s3.amazonaws.com/assets.datacamp.com/course/intro_to_r/shining_
 ```
 
 `@sample_code`
-
 ```{r}
 # shining_list, the list containing movie name, actors and reviews, is pre-loaded in the workspace
 
@@ -448,7 +447,6 @@ shining_list_full <-
 ```
 
 `@solution`
-
 ```{r}
 # shining_list, the list containing movie name, actors and reviews, is pre-loaded in the workspace
 
@@ -469,5 +467,3 @@ test_object("shining_list_full", eq_condition = "equal",
 test_function("str", "object", incorrect_msg = "Don't forget to display the structure of `shining_list_full` with `str()`.")
 success_msg("Great! This was the last exercise on R lists! You now have a solid basis in the R programming language, but there's so much more to learn. Check out all the other DataCamp courses and become a true data science expert!")
 ```
-
-
